welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:12: error: ')' expected but 'if' found.
	if (litMessage()=A) {
        ^BDRBuggle:15: error: ';' expected but 'if' found.
	if (litMessage()=B) {
        ^